--- a/fujifilm/sass/style.sass
+++ b/fujifilm/sass/style.sass
@@ -261,7 +261,7 @@ section
     display: flex
     flex-direction: column
     align-items: flex-end
-    z-index: 3
+    z-index: 6
     &__top
         display: flex
         flex-direction: column
@@ -420,7 +420,8 @@ section
         width: 100%
     &__logo
         display: block
-        max-width: 100%
+        max-width: 299px
+        width: 100%
         margin-bottom: 30px
     &__agit
         font-size: 52px
@@ -442,7 +443,7 @@ section
         &-rub
             color: #000
             font-weight: 500
-            font-size: 42px
+            font-size: 36px
     &__row
         display: flex
         align-items: center
@@ -616,6 +617,9 @@ section
         flex-basis: 30%
     &_end
         justify-content: flex-end
+    &_center
+        justify-content: center
+        align-items: center
     &_medium
         flex-basis: 38%
     &_big
@@ -673,6 +677,9 @@ a.text
             margin-top: 50px
     &_left
         max-width: 465px
+    &_center
+        text-align: center
+        display: inline-block
     &_mt10
         margin-top: 10px
     &_mt20
@@ -790,11 +797,21 @@ a.text
         margin-bottom: 50px
     &__body
         position: relative
+    &__author
+        display: inline-block
+        position: absolute
+        font-size: 18px
+        font-weight: 500
+        color: #ffffff
+        bottom: 55px
+        right: 245px
+        z-index: 5
     &__item
         width: 100%
         min-height: 300px
         max-height: 940px
         overflow: hidden
+        position: relative
     &__img
         width: 100%
         height: 100%
@@ -922,6 +939,19 @@ a.text
         height: auto
         margin: 0 auto
         display: block
+        position: relative
+        &::before
+           content: attr(data-author)
+           display: inline-block
+           position: absolute
+           font-size: 25px
+           color: #ffffff
+           font-weight: 500
+           bottom: 40px
+           right: 60px
+           z-index: 3
+           background-color: rgba(0, 0, 0, .25)
+           padding: 5px
         img
             width: 100%
             height: 100%
@@ -972,8 +1002,27 @@ a.text
     padding: 70px 0px
     &__button
         color: $text-blue
+        display: flex
+        justify-content: space-between
+        max-width: 820px
+        align-items: center
         padding: 0
         font-weight: 600
+    &__img
+        width: 100%
+        max-width: 100%
+        margin-bottom: 20px
+    &__item
+        display: flex
+        flex-direction: column
+        align-items: center
+        flex-basis: 21%
+        & + &
+            margin-left: 20px
+    &__logo
+        max-width: 100%
+        width: auto
+        height: 30px
 
 .reviews
     &__body
@@ -1239,16 +1288,23 @@ a.text
                 text-align: center
                 .popup__table-text
                     font-size: 14px
+                    font-weight: 600
             &:first-child
                 width: 300px
+                padding: 10px 7px
                 .popup__table-text
                     font-weight: 600
+                    text-align: left
         th, td
             border: 1px solid $bg-grey
         &-text
             font-size: 16px
             display: inline-block
             text-align: center
+            &_red
+                color: $main_red !important
+            &_bolder
+                font-weight: 700 !important
         &-wrap
             position: relative
             overflow-x: auto
