--- a/fujifilm/sass/style.sass
+++ b/fujifilm/sass/style.sass
@@ -787,12 +787,14 @@ a.text
         padding-bottom: 140px
         .slider
             &__pagination
-                width: 100% !important
-                max-width: 90px
-                .swiper-pagination-bullet
-                    margin: 0 5px
                 &-block
                     transform: translate(-50%, 100%)
+    .slider
+        &__pagination
+            width: 100% !important
+            max-width: 90px
+            .swiper-pagination-bullet
+                margin: 0 5px
     &__title
         margin-bottom: 50px
     &__body
