--- a/kalashnikov/sass/fonts.sass
+++ b/kalashnikov/sass/fonts.sass
@@ -8,6 +8,13 @@
 @font-face
     font-family: 'PFEncoreSansPro'
     font-display: swap
+    font-weight: 300
+    font-style: italic
+    src: url(../fonts/PFEncoreSansPro-LightItalic.ttf) format('truetype')
+
+@font-face
+    font-family: 'PFEncoreSansPro'
+    font-display: swap
     font-weight: 400
     font-style: normal
     src: url(../fonts/PFEncoreSansPro-Regular.ttf) format('truetype')
@@ -18,6 +25,13 @@
     font-weight: 500
     font-style: normal
     src: url(../fonts/PFEncoreSansPro-Medium.ttf) format('truetype')
+
+@font-face
+    font-family: 'PFEncoreSansPro'
+    font-display: swap
+    font-weight: 500
+    font-style: italic
+    src: url(../fonts/PFEncoreSansPro-MediumItalic.ttf) format('truetype')
 
 @font-face
     font-family: 'PFEncoreSansPro'
