--- a/kalashnikov/sass/style.sass
+++ b/kalashnikov/sass/style.sass
@@ -9,6 +9,9 @@ $transition: all .3s ease-out 0s
     border-radius: 0px
     font-family: 'PFEncoreSansPro', sans-serif
 
+body, html
+    overflow-x: hidden
+
 body
     background-color: #000000
 
@@ -19,10 +22,14 @@ body
     left: 0
     width: 100%
     z-index: 5
+    transition: $transition 
     &__wrap
         display: flex
         align-items: flex-end
         justify-content: space-between
+    &.fixed
+        padding: 20px 0px
+        background-color: rgba(0, 0, 0, .4)
 
 .logo
     max-width: 191px
@@ -32,6 +39,8 @@ body
         width: 100%
 
 .main
+    display: block
+    position: relative
     margin-top: 125px
 
 .nav
@@ -217,3 +226,217 @@ body
         font-weight: 700
         font-size: 60px
 
+.translation
+    padding-bottom: 90px
+
+.program
+    padding-bottom: 90px
+    &__table
+        display: flex
+        justify-content: space-between
+    &__column
+        flex: 1 1 48%
+    &__row
+        display: flex
+        align-items: center
+        & + &
+            margin-top: 10px
+    &__time
+        font-size: 21px
+        color: #ffffff
+        font-weight: 500
+        flex-shrink: 0
+    &__name
+        margin-left: 30px
+        font-weight: 500
+        font-size: 22px
+        color: #cd0611
+
+.question
+    &__wrap
+        display: flex
+        flex-direction: column
+        align-items: center
+    &__subtitle
+        display: inline-block
+        text-align: center
+        color: #e4e4e4
+        font-size: 24px
+        font-weight: 300
+        margin-bottom: 30px
+    &__form
+
+.form
+    width: 100%
+    max-width: 670px
+    padding-bottom: 100px
+    &__row
+        display: flex
+        align-items: center
+        & + &
+            margin-top: 20px
+        &_between
+            justify-content: space-between
+        &_center
+            justify-content: center
+    &__input
+        display: block
+        width: 100%
+        border: none
+        outline: none
+        border-radius: 5px
+        box-shadow: 0 0 0 2px #e30613
+        font-weight: 300
+        font-size: 20px
+        padding: 10px 20px
+        color: #adacae
+        resize: none
+        &_purple
+            background-color: #130a1a
+        & + &
+            margin-left: 17px
+    &__file
+        position: absolute
+        visibility: hidden
+        opacity: 0
+        height: 1px
+        width: 1px
+        overflow: hidden
+        &-label
+            cursor: pointer
+        &-text
+            padding-left: 30px
+            color: #adacae
+            display: inline-block
+            position: relative
+            font-size: 17px
+            font-weight: 300
+            &::before
+                content: ''
+                display: inline-block
+                height: 20px
+                width: 20px
+                position: absolute
+                background-image: url(../img/form-file-ico.png)
+                background-size: contain
+                background-repeat: no-repeat
+                background-position: center
+                top: 50%
+                left: 0px
+                transform: translate(0%, -50%)
+        &-success
+            font-size: 17px
+            font-weight: 300
+            color: #0ebb5f
+            margin-left: 5px
+        &-name
+            font-size: 16px
+            font-weight: 500
+            color: #ffffff
+        &-result
+            display: inline-block
+            position: relative
+            visibility: hidden
+            &.active
+                visibility: visible
+            &::before
+                content: ''
+                display: inline-block
+                width: 18px
+                height: 18px
+                position: absolute
+                top: 55%
+                left: -10px
+                transform: translate(-100%, -50%)
+                background-image: url(../img/form-success-ico.png)
+                background-size: contain
+                background-repeat: no-repeat
+                background-position: center
+    &__button
+        font-size: 19px
+        color: #ffffff
+        display: inline-block
+        position: relative
+        padding: 10px 60px
+        border: none
+        cursor: pointer
+        background-color: $main_red
+        box-shadow: 0 0 0 2px #a5a5a5
+        transform: skewX(-20deg)
+        background: rgb(180,0,11)
+        background: linear-gradient(90deg, rgba(180,0,11,1) 0%, rgba(227,0,13,1) 100%)
+        transition: $transition
+        &::after
+            content: ''
+            display: inline-block
+            position: absolute
+            top: 50%
+            right: 15px
+            transform: translate(0, -50%) skewX(20deg)
+            height: 15px
+            width: 10px
+            background-image: url(../img/button-chevron.png)
+            background-size: contain
+            background-repeat: no-repeat
+            background-position: center
+        span
+            display: inline-block
+            transform: skewX(20deg)
+        &:hover
+            background: linear-gradient(90deg, rgba(227,0,13,1) 0%, rgba(227,0,13,1) 100%)
+            
+.tops
+    .big-title__bg
+        top: -115%
+    &__row
+        display: flex
+        justify-content: space-between
+    &__col
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        align-items: center
+        flex-basis: 30%
+        .form__button
+            font-size: 20px
+            padding: 10px 55px 10px 35px
+            margin-top: auto
+            &::after
+                right: 25px
+    &__icon
+        max-width: 120px
+        margin-bottom: 35px
+        width: 100%
+        height: auto
+        margin-top: 40px
+    &__title
+        margin-bottom: 30px
+        text-align: center
+        font-size: 38px
+        line-height: 40px
+        font-weight: 700
+        color: #ffffff
+    &__list
+        list-style-position: inside
+    &__item
+        color: #e30613
+        font-size: 18px
+        font-weight: 500
+        & + &
+            margin-top: 10px
+        &-silver
+            font-weight: 300
+            color: #ffffff
+    &__photo
+        width: 100%
+        height: auto
+        max-width: 100%
+    &__italic
+        font-size: 24px
+        line-height: 36px
+        font-style: italic
+        color: #ffffff
+        text-align: center
+        font-weight: 300
+        &_medium
+            font-weight: 500
