--- a/kalashnikov/sass/style.sass
+++ b/kalashnikov/sass/style.sass
@@ -505,4 +505,11 @@ body
             margin-left: 0
             margin-top: 25px
     &__service
-        
+        .footer__text
+            margin-right: 20px
+        margin-top: 50px
+        display: flex
+        justify-content: center
+        align-items: center
+    &__copyright
+        margin-top: 35px
