--- a/kalashnikov/sass/style.sass
+++ b/kalashnikov/sass/style.sass
@@ -324,10 +324,7 @@ body
         padding: 0px 20px
         font-weight: 700
         font-size: 60px
-        color: transparent    
-        -webkit-background-clip: text
-        background-clip: text
-        background-image: linear-gradient(to bottom, #9f9f9f, #e8e8e8)
+        text-shadow: 0 -2px 2px #e8e8e8
 
 .translation
     padding-bottom: 90px
@@ -556,10 +553,7 @@ body
         line-height: 40px
         font-weight: 700
         max-width: 350px
-        color: transparent    
-        -webkit-background-clip: text
-        background-clip: text
-        background-image: linear-gradient(to bottom, #9f9f9f, #e8e8e8)
+        color: #adadad
     &__list
         list-style-position: inside
     &__img
