--- a/kalashnikov/sass/media.sass
+++ b/kalashnikov/sass/media.sass
@@ -61,10 +61,16 @@
         &__form
             flex-direction: column
             align-items: center
+            width: 100%
+            max-width: 600px
+            .form__input + .form__input
+                margin-top: 15px 
+            .form__input 
+                width: 100%
             .footer__text
                 margin-bottom: 15px
             &-col
-                margin: 0px 0px 30px !important
+                margin: 0px 0px 15px !important
                 width: 100%
         &__top
             display: block
@@ -77,6 +83,7 @@
 
 @media screen and ( max-width: 900px )
     .header
+        position: fixed
         &__wrap
             align-items: center
         .nav
@@ -135,6 +142,13 @@
             padding: 10px 35px
 
     .footer
+        &__text
+            margin-left: 0
+            text-align: center
+        .form__input
+            width: 100%
+        &__form
+            width: 100%
         &__service
             flex-direction: column
             .footer__text
@@ -206,6 +220,14 @@
                 font-size: 44px
 
 @media screen and ( max-width: 410px )
+
+    .login__body
+        padding: 40px 20px
+        .big-title__text
+            font-size: 28px
+        .form__input
+            padding: 5px 10px
+            font-size: 16px
 
     .timer
         &__num
