--- a/kalashnikov/sass/media.sass
+++ b/kalashnikov/sass/media.sass
@@ -221,6 +221,11 @@
 
 @media screen and ( max-width: 410px )
 
+    .gallery
+        &__item
+            width: 260px
+            height: 260px
+
     .login__body
         padding: 40px 20px
         .big-title__text
