--- a/kalashnikov/sass/media.sass
+++ b/kalashnikov/sass/media.sass
@@ -82,6 +82,9 @@
                 padding: 5px 40px
 
 @media screen and ( max-width: 900px )
+    .swiper__control
+        display: none
+
     .header
         position: fixed
         &__wrap
