--- a/kalashnikov/sass/style.sass
+++ b/kalashnikov/sass/style.sass
@@ -696,10 +696,13 @@ body
         min-width: 0
     &__item
         overflow: hidden
+        display: flex
+        align-items: center
+        justify-content: center
     &__img
         display: block
         margin: 0 auto
-        height: 100%
+        height: auto
         width: 100%
         object-fit: cover
     &__close
