--- a/citadel/sass/media.sass
+++ b/citadel/sass/media.sass
@@ -1,6 +1,25 @@
 @media screen and ( max-height: 900px )
+
+    .header, .footer
+        &__wrap
+            padding: 15px 0px
+    
+    .contacts
+        padding-top: 0px
+        .about
+            &__text
+                margin-top: 0px
+
+    .form
+        margin-top: 10px
+        &__label
+            margin-bottom: 20px
+        &__input
+            & + &
+                margin-top: 8px
+
     .main
-        padding: 90px 0px 95px
+        padding: 80px 0px 95px
 
     .about
         padding-top: 80px
@@ -17,7 +36,11 @@
             background-size: 75%
         &:nth-child(1) &__logo
             background-size: 50%
-            
+
+@media screen and ( max-height: 800px )
+    .portfolio, .about
+        padding-top: 30px
+
 @media screen and ( max-width: 1060px )
     .header
         &__wrap
