--- a/fujifilm/sass/style.sass
+++ b/fujifilm/sass/style.sass
@@ -483,6 +483,8 @@ section
     align-items: flex-start
     &_middle
         align-items: center
+    &_center
+        justify-content: center
     &_stretch
         align-items: stretch
     &_between
@@ -641,8 +643,10 @@ section
             margin-top: -180px
             img
                 transform: translateY(6px)
-        &_corpus-2, &_corpus-2 img
-            max-height: 360px
+        &_corpus-2
+            max-height: 380px
+        &_corpus-2 img
+            max-width: 100%
     &__img img
         width: 100%
         height: 100%
@@ -786,13 +790,14 @@ a.text
     &_last
         padding-bottom: 140px
         .slider
-            &__pagination
-                &-block
-                    transform: translate(-50%, 100%)
-        .slider
+            &__item
+                max-height: 95vh
+                min-height: 400px
             &__pagination
                 width: 100% !important
                 max-width: 90px
+                &-block
+                    transform: translate(-50%, 100%)
                 .swiper-pagination-bullet
                     margin: 0 5px
     &__title
@@ -810,15 +815,16 @@ a.text
         z-index: 5
     &__item
         width: 100%
-        min-height: 400px
         height: 100%
-        max-height: 875px
         overflow: hidden
         position: relative
     &__img
         width: 100%
         height: 100%
         object-fit: cover
+    &__mode
+        font-size: 20px
+        font-weight: 600
     &__control
         position: relative
         height: 100px
@@ -848,7 +854,8 @@ a.text
         &-container
             width: 100%
             height: 100px
-            max-width: 1400px
+            max-width: 1600px
+            padding: 0px 30px
             margin: 0 auto
             display: flex
             justify-content: space-between
@@ -950,6 +957,13 @@ a.text
     &__colored
         background-color: $bg-grey
         padding: 70px 0px
+    &__subtext
+        display: flex
+        align-items: center
+        justify-content: space-around
+        margin-top: 20px
+        .text
+            text-align: center
     &__img
         max-width: 1440px
         width: 100%
@@ -1114,6 +1128,11 @@ a.text
         display: block
 
 .footer
+    &__divide
+        display: inline-block
+        height: 40px
+        width: 3px
+        background-color: $text-black
     &__mobile
         display: none
         align-items: center
@@ -1128,10 +1147,9 @@ a.text
     &__row
         display: flex
         align-items: center
+        max-width: 445px
         .column
             flex-basis: 42%
-        .column + .column
-            margin-left: 55px
     &__logo
         width: 196px
         height: 33px
