--- a/electro/sass/style.sass
+++ b/electro/sass/style.sass
@@ -31,6 +31,8 @@ section
         font-size: 32px
         line-height: 36px
         font-weight: 500
+        &_white
+            color: #ffffff
 
 .header, .footer
     flex-grow: 0
@@ -407,6 +409,7 @@ section
         font-size: 18px
         font-weight: 500
     &__subtitle
+        line-height: 22px
         font-size: 14px
         color: #8b929f
     &__inputs
@@ -420,9 +423,12 @@ section
         font-weight: 500
         text-transform: uppercase
         svg, img
-            // animation: count 1 1s linear
+            transform-origin: 15px 13.5px
             width: 30px
             height: 30px
+        &.animate
+            svg, img
+                animation: count 1 1s linear
     &__bottom
         display: flex
         align-items: center
@@ -465,6 +471,7 @@ section
         &-img
             height: 120px
             width: 140px
+            user-select: none
         &-input:checked + &-fake
             background-color: $btn-orange
         &-input
@@ -482,13 +489,21 @@ section
             background-color: #fff
             border-radius: 50%
             border: 2px solid $btn-orange
-            &::before
+            &::before, &::after
                 content: ''
                 display: inline-block
                 position: absolute
+                height: 2px
+                background-color: #fff
                 top: 50%
                 left: 50%
                 transform: translate(-50%, -50%)
+            &::before
+                width: 7px
+                transform: translate(calc( -4px - 50% ), calc(2px - 50%)) rotate(45deg)
+            &::after
+                width: 13px
+                transform: translate(calc(3px - 50%), calc(1px - 50%)) rotate(-45deg)
         &-item + &-item
             margin-left: 22px
         &-item
@@ -508,4 +523,111 @@ section
             white-space: nowrap
             display: inline-block
             text-align: center
-        
+            user-select: none
+    &__form
+        margin-top: 40px
+        &-wrap
+            border-radius: 10px
+            overflow: hidden
+            height: 50px
+            background: #f7f7fb
+            padding: 10px 55px
+            position: relative
+            &::before
+                position: absolute
+                content: ''
+                display: inline-block
+                top: 50%
+                left: 15px
+                transform: translateY(-50%)
+                height: 20px
+                width: 20px
+                background-size: contain
+                background-repeat: no-repeat
+                background-position: center
+            &:nth-child(1)::before
+                background-image: url(../img/svg/name.svg)
+            &:nth-child(2)::before
+                background-image: url(../img/svg/telefon.svg)
+        &-input
+            font-weight: 300
+            font-size: 16px
+            width: 100%
+            height: 100%
+            display: block
+            background-color: transparent
+            outline: none
+        &-button
+            padding: 18px
+            text-transform: uppercase
+            font-weight: 500
+        &-row + &-row
+            margin-top: 20px
+        &-row
+            display: flex
+            align-items: center
+            justify-content: space-between
+            .calc__subtitle
+                flex-basis: 40%
+            &>*
+                flex-basis: 48%
+    
+.benefits
+    padding-bottom: 80px
+    &__wrap
+        justify-content: space-between
+        display: flex
+        align-items: stretch
+        padding: 0px 50px
+
+.benefits-item
+    display: flex
+    align-items: center
+    flex-direction: column
+    max-width: 345px
+    &__img
+        height: 100px
+        width: auto
+        margin-bottom: 15px
+    &__title
+        font-size: 24px
+        font-weight: 500
+        text-align: center
+        margin-bottom: 20px
+    &__text
+        display: inline-block
+        text-align: center
+        font-size: 16px
+        color: #8b929f
+        line-height: 24px
+
+.index-about
+    background-color: #000000
+    padding: 75px 0px 90px
+    &__subtitle
+        margin-top: 20px
+        display: inline-block
+        color: #ffffff
+        font-size: 24px
+        line-height: 36px
+        max-width: 520px
+    &__list
+        margin-top: 40px
+        column-width: 330px
+        max-width: 680px
+    &__img
+        max-width: 30px
+        width: 100%
+        height: auto
+        margin-right: 20px
+    &__item
+        display: flex
+        width: auto
+        align-items: center
+        margin-bottom: 40px
+        &:last-child
+            margin-bottom: 0
+    &__text
+        color: #ffffff
+        font-size: 18px
+        line-height: 30px
