--- a/event/assets/css/custom.css
+++ b/event/assets/css/custom.css
@@ -458,6 +458,11 @@ html, body {
     -o-transition: all .3s ease-out 0s;
 }
 
+.container {
+    z-index: 2;
+    position: relative;
+}
+
 .totalizator__link:hover {
     text-decoration: none;
     background-color: #c26712;
@@ -528,7 +533,7 @@ html, body {
 
 .gallery__deco {
     position: absolute;
-    z-index: 0;
+    z-index: 1;
 }
 
 .gallery__deco:nth-child(1){
