--- a/electro/sass/media.sass
+++ b/electro/sass/media.sass
@@ -29,6 +29,8 @@
                 margin-top: 30px
 
     .header
+        .burger
+            display: inline-block
         .services-btn, .contacts-dropdown, .language
             display: none
 
