--- a/electro/css/index.css
+++ b/electro/css/index.css
@@ -1,4 +1,7 @@
-/* Стили шрифтов */
+/* Стили анимеции */
+@import './aos.css';
+
+/* Стили свайпера */
 @import './swiper-bundle.min.css';
 
 /* Стили шрифтов */
