осталось моб меню

--- a/electro/sass/media.sass
+++ b/electro/sass/media.sass
@@ -41,7 +41,6 @@
     .index-portfolio__item
         padding-bottom: 34%
 
-
 @media screen and ( max-width: 1270px )
     .calc
         &__type-item
@@ -260,6 +259,16 @@
             line-height: 44px
 
 @media screen and ( max-width: 720px )
+
+    .popup
+        &__text
+            font-size: 16px
+            line-height: 23px
+            &_small
+                font-size: 12px
+                line-height: 20px
+                padding: 0
+
     .calc
         &__types
             flex-direction: column
